BG2-2292: fix for end of row icon text cut off

--- a/src/app/donation-start/donation-start.component.scss
+++ b/src/app/donation-start/donation-start.component.scss
@@ -306,7 +306,7 @@ a {
   fa-icon.ng-fa-icon {
     color: $colour-primary; // #2C089BFF
     font-size: 40px;
-    min-width: 5rem;
+    min-width: 4rem;
   }
 
   .c-icon-title {
