--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -221,8 +221,18 @@
   display: flex;
   padding: 10px 10px;
   align-items: center;
-  min-width: 33%; // works when there are 3 icons in each row
-  max-width: 33%; // works when there are less than 3 items in a row
+  min-width: 28%;
+  padding-left: 20px;
+
+  @media#{$breakpoint-sm} {
+    max-width: 28%;
+  }
+  @media#{$breakpoint-md} {
+    padding-left: 0px;
+  }
+  @media#{$breakpoint-lg} {
+    padding-left: 20px;
+  }
 }
 
 @mixin format-icon-title {
@@ -230,5 +240,15 @@
     margin: auto;
     width: 90%;
     line-height: 20px;
+    display: block;
+    word-wrap: break-word;
+    padding-left: 20px;
+
+    @media#{$breakpoint-lg} {
+      padding-left: 5px;
+    }
+    @media#{$breakpoint-xl} {
+      padding-left: 10px;
+    }
 }
 
